# cryptobot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: pairs.yaml  settings.yaml
config/freqtrade/: config_dry_run.json
deploy/: com.cryptobot.daemon.plist  cryptobot-daemon.service  logrotate-cryptobot.conf  preflight.sh
docs/: README.md  problem.md  roadmap.md
freqtrade_strategies/: AgentSignalStrategy.py
src/cryptobot/: __init__.py  __main__.py  cache.py  capital_strategy.py  config.py  freqtrade_api.py  logging_config.py  notify.py  regime_smoother.py
src/cryptobot/archive/: __init__.py  reader.py  writer.py
tests/: test_analyst_weights.py  test_api_llm.py  test_archive.py  test_backfill.py  test_backtest.py  test_backtest_engine.py  test_baselines.py  test_bootstrap.py  test_cache_cleanup.py  test_capital_strategy.py  test_circuit_breaker.py  test_coinglass.py  test_confidence_tuner.py  test_correlation.py  test_cost_model.py  test_crypto_specific.py  test_data.py  test_defi_tvl.py  test_doctor.py  test_dxy.py  test_economic_calendar.py  test_edge.py  test_equity_tracker.py  test_events.py  test_exchange_reserve.py  test_execute_node.py  test_execution_optimizer.py  test_factor_analysis.py  test_feature_feedback.py  test_features.py  test_funding_arb.py  test_grid_trading.py  test_historical_replay.py  test_hurst.py  test_indicators.py  test_init.py  test_journal.py  test_lgb_scorer.py  test_liquidation.py  test_logging_config.py  (+50 more)
user_data/strategies/: AgentSignalStrategy.py
(+125 files in other folders)
